# gcal

./: .gitignore  0001-Name-of-swiss-federal-state-Basel-Landschaft-correct.patch  ABOUT-NLS  ATTENTION  BUGS  COPYING  HISTORY  INSTALL  LIMITATIONS  MANIFEST  Makefile.am  Makefile.in  NEWS  README  SYMBOLS  THANKS  TODO  acconfig.h  aclocal.m4  bootstrap  bootstrap.conf  cfg.mk  config.hin  configure  configure.ac  configure.in  install-inf.in  install-sh
data/: Makefile.am  Makefile.in  README  ansipic.rc  bkk.rc  de-mdata.rc  de-sdata.rc  mdata.rc  meteoric.rc  ms.rc  sdata.rc  sun-moon.rc  textpic.rc  wloc.rc  wtt1.rc  wtt2.rc  wtt3.rc
data/dates/: events5  world
data/scripts/: cal2gcal.awk  cal2gcal.pl  ct2gcal.awk  ct2gcal.pl  old2v220.awk  old2v220.pl  v2x2v300.awk  v2x2v300.pl
doc/: 2accent.awk  2accent.pl  GREG-REFORM  ISO_3166  ISO_6709  Makefile.am  Makefile.in  calendar.faq  mks1sed.in  mks2sed.in  mksamp.in  texinfo.tex
doc/de/: gcal.html  gcal.info  gcal.info-1  gcal.info-10  gcal.info-11  gcal.info-12  gcal.info-13  gcal.info-14  gcal.info-2  gcal.info-3  gcal.info-4  gcal.info-5  gcal.info-6  gcal.info-7  gcal.info-8  gcal.info-9  gcal.txt  txi-de.tex
doc/de/examples/: bio.in  bio.sh  bio.texi  common.in  common.rc  common.texi  cycle-1.in  cycle-1.sh  cycle-1.texi  cycle-2.in  cycle-2.sh  cycle-2.texi  demo-1.in  demo-1.rc  demo-1.texi  demo-1a.in  demo-1a.sh  demo-1a.texi  demo-2.in  demo-2.rc  demo-2.texi  demo-2a.in  demo-2a.sh  demo-2a.texi  demo-3.in  demo-3.rc  demo-3.texi  demo-3a.in  demo-3a.sh  demo-3a.texi  dvar-1.in  dvar-1.rc  dvar-1.texi  dvar-1a.in  dvar-1a.sh  dvar-1a.texi  lbrk-1.in  lbrk-1.rc  lbrk-1.texi  lbrk-1a.in  (+71 more)
doc/de/man/: gcal.1  gcal2txt.1  tcal.1  txt2gcal.1
doc/de/texi/: gcal.texi
doc/en/: Makefile.am  fdl.texi  gcal.html  gcal.info  gcal.info-1  gcal.info-10  gcal.info-11  gcal.info-12  gcal.info-13  gcal.info-14  gcal.info-2  gcal.info-3  gcal.info-4  gcal.info-5  gcal.info-6  gcal.info-7  gcal.info-8  gcal.info-9  gcal.texi  gcal.txt  txi-en.tex
doc/en/examples/: Makefile.am  bio.texi  cycle-1.texi  cycle-2.texi  demo-1a.texi  demo-2a.texi  demo-3a.texi  dvar-1a.texi  lbrk-1a.texi  limit.texi  moon.texi  remark.texi  speci-1a.texi  sun-1a.texi  swtim-1a.texi  tdemo-1.texi  tdemo-1.txt  tdemo-1b.texi  tdemo-1c.texi  tvar-1a.texi  tvar-2a.texi  tvarc-1a.texi  wspc-1a.texi
doc/en/man/: gcal.1  gcal2txt.1  tcal.1  txt2gcal.1
doc/en/texi/: Makefile.am  gcal.texi
doc/srcdoc/: Doxyfile  main.md  wishlist.md
intl/: Makefile.in  VERSION  bindtextdom.c  cat-compat.c  dcgettext.c  dgettext.c  explodename.c  finddomain.c  gettext.c  gettext.h  gettextP.h  hash-string.h  intl-compat.c  l10nflist.c  libgettext.h  linux-msg.sed  loadinfo.h  loadmsgcat.c  localealias.c  po2tbl.sed.in  textdomain.c  xopen-msg.sed
lib/: Makefile.am
misc/: Makefile.am  Makefile.in  README  gcalltx  gcalltx.bat  gcalltx.sed  locale.alias  wdays  wdays.bat  wdays.sed
misc/daily/: daily.awk  daily.bat  daily.in  daily.pl
misc/ddiff/: ddiff.bat  ddiff.in  ddiff1.awk  ddiff1.pl  ddiff2.awk  ddiff2.pl  ddiffdrv.awk  ddiffdrv.bat  ddiffdrv.in  ddiffdrv.pl
misc/dst/: dst.awk  dst.in  dst.pl
misc/gcalltx/: gcalltx.in  gcalltxp.in
misc/moon/: moon.bat  moon.in  moon1.awk  moon2.awk
misc/mrms/: mrms.awk  mrms.bat  mrms.in  mrms.pl  mrms.rc
misc/srss/: srss.awk  srss.bat  srss.in  srss.pl  srss.rc
misc/wloc/: wlocdrv.bat  wlocdrv.in  wlocdrv1.awk  wlocdrv1.pl  wlocdrv2.awk  wlocdrv2.pl
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  cat-id-tbl.c  de.gmo  de.po  fr.gmo  fr.po  gcal.pot  nl.gmo  nl.po  pl.gmo  pl.po  ru.gmo  ru.po  sv.gmo  sv.po
src/: Makefile.am  Makefile.in  common.h  defines.h  file-io.c  file-io.h  gcal.c  gcal.h  gcal2txt.c  gcal2txt.h  globals.h  hd-astro.c  hd-astro.h  hd-data.c  hd-data.h  hd-data1.c  hd-data1.h  hd-data2.c  hd-data2.h  hd-data3.c  hd-data3.h  hd-data4.c  hd-data4.h  hd-data5.c  hd-data5.h  hd-defs.h  hd-use.c  hd-use.h  help.c  help.h  print.c  print.h  rc-astro.c  rc-astro.h  rc-check.c  rc-check.h  rc-defs.h  rc-insert.c  rc-insert.h  rc-use.c  (+14 more)
systems/acorn/: makefile.gcc  readme.arm
systems/amiga/: makefile.gcc  makefile.sas
systems/atari/: makefile.st
systems/msdos/: gcal_tc2.prj  makefile.bcc  makefile.djg  makefile.msc  makefile.tc2  makefile.tcc  makefile.wcc  makefile.ztc
systems/nt/: makefile.nt
systems/os2/: config.h  makefile.os2  readme.os2
systems/os2/intl/: gnuintl.def  makefile.os2  patches.os2
systems/primos/: build.cpl  ci.opts  getenv.c  readme.pri
systems/primos/include/: stdlib.h
systems/vms/: makefile.gcc  makefile.mms  makefile.vms  makegcal.com  readme.vms
